--- a/Try it on a device/Boosting classifier accuracy by grouping categories.ipynb
+++ b/Try it on a device/Boosting classifier accuracy by grouping categories.ipynb
@@ -42,18 +42,47 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
       "Warning: 'conda-forge' already in 'channels' list, moving to the top\n",
-      "Warning: 'microsoft-ell' already in 'channels' list, moving to the top\n",
-      "Fetching package metadata ...............\n",
-      "Solving package specifications: .\n",
+      "Warning: 'microsoft-ell' already in 'channels' list, moving to the top\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching package metadata .................\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
-      "# All requested packages already installed.\n",
-      "# packages in environment at /home/nbcommon/anaconda3_431:\n",
-      "#\n",
-      "ell                       0.0.1            py36h0a24ad1_0    microsoft-ell\n"
+      "PackageNotFoundError: Packages missing in current channels:\n",
+      "            \n",
+      "  - ell\n",
+      "\n",
+      "We have searched for the packages in the following channels:\n",
+      "            \n",
+      "  - https://conda.anaconda.org/microsoft-ell/win-64\n",
+      "  - https://conda.anaconda.org/microsoft-ell/noarch\n",
+      "  - https://conda.anaconda.org/conda-forge/win-64\n",
+      "  - https://conda.anaconda.org/conda-forge/noarch\n",
+      "  - https://repo.continuum.io/pkgs/main/win-64\n",
+      "  - https://repo.continuum.io/pkgs/main/noarch\n",
+      "  - https://repo.continuum.io/pkgs/free/win-64\n",
+      "  - https://repo.continuum.io/pkgs/free/noarch\n",
+      "  - https://repo.continuum.io/pkgs/r/win-64\n",
+      "  - https://repo.continuum.io/pkgs/r/noarch\n",
+      "  - https://repo.continuum.io/pkgs/pro/win-64\n",
+      "  - https://repo.continuum.io/pkgs/pro/noarch\n",
+      "  - https://repo.continuum.io/pkgs/msys2/win-64\n",
+      "  - https://repo.continuum.io/pkgs/msys2/noarch\n",
+      "            \n",
+      "\n"
      ]
     }
    ],
@@ -73,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -81,12 +110,7 @@
      "output_type": "stream",
      "text": [
       "compiling...\n",
-      "generating python interfaces for model in boosting\\pi3\n",
-      "C:\\Users\\rdeline\\AppData\\Local\\Continuum\\Miniconda3\\Library\\bin\\swig -python -c++ -Fmicrosoft -py3 -outdir boosting\\pi3 -IC:\\ID\\ELL\\build\\interfaces\\python\\package\\ell/headers/common -IC:\\ID\\ELL\\build\\interfaces\\python\\package\\ell/headers/common/include -IC:\\ID\\ELL\\build\\interfaces\\python\\package\\ell/headers/emitters -o boosting\\pi3\\modelPYTHON_wrap.cxx boosting\\pi3\\model.i\n",
-      "running opt...\n",
-      "C:\\Users\\rdeline\\AppData\\Local\\Continuum\\Miniconda3\\Library\\bin\\opt boosting\\pi3\\model.bc -o boosting\\pi3\\model.opt.bc -O3\n",
-      "running llc...\n",
-      "C:\\Users\\rdeline\\AppData\\Local\\Continuum\\Miniconda3\\Library\\bin\\llc boosting\\pi3\\model.opt.bc -o boosting\\pi3\\model.obj -filetype=obj -O3 -mtriple=armv7-linux-gnueabihf -mcpu=cortex-a53 -relocation-model=pic\n"
+      "compiled model up to date\n"
      ]
     },
     {
@@ -95,7 +119,7 @@
        "'boosting\\\\pi3\\\\CMakeLists.txt'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,6 +144,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -140,28 +165,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Password on the Raspberry Pi ········\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f05de4fc091a49bf8bbbc25b32574e50"
+       "model_id": "a57b95d0ab4d4210b58c73b83effb552"
       }
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PREDICTION\n",
+      "? file, file cabinet, filing cabinet\n"
+     ]
     }
    ],
    "source": [
-    "%%rpi --user=pi --ip=157.54.152.78 --rpipath=/home/pi/mymodel --model=pretrained_model\n",
+    "%%rpi --user=pi --ip=157.54.152.78 --rpipath=/home/pi/compare --model=pretrained_model\n",
     "\n",
     "import sys\n",
     "import os\n",
@@ -174,7 +202,7 @@
     "    import winsound\n",
     "\n",
     "# import the ELL model's Python module\n",
-    "import model1\n",
+    "import model\n",
     "\n",
     "# Function to return an image from our camera using OpenCV\n",
     "def get_image_from_camera(camera):\n",
@@ -213,8 +241,8 @@
     "\n",
     "# Declare variables that define where to find the sounds files we will play\n",
     "script_path = os.path.dirname(os.path.abspath(__file__))\n",
-    "woofSound = os.path.join(script_path, \"woof.wav\")\n",
-    "meowSound = os.path.join(script_path, \"meow.wav\")\n",
+    "woof_sound = os.path.join(script_path, \"woof.wav\")\n",
+    "meow_sound = os.path.join(script_path, \"meow.wav\")\n",
     "\n",
     "# Helper function to play a sound\n",
     "def play(filename):\n",
@@ -229,108 +257,79 @@
     "def take_action(group):\n",
     "    if group == \"Dog\":\n",
     "        # A prediction in the dog category group was detected, play a `woof` sound\n",
-    "        play(woofSound)\n",
+    "        play(woof_sound)\n",
     "    elif group == \"Cat\":\n",
     "        # A prediction in the cat category group was detected, play a `meow` sound\n",
-    "        play(meowSound)\n",
+    "        play(meow_sound)\n",
     "\n",
     "# Open the video camera. To use a different camera, change the camera index.\n",
     "camera = cv2.VideoCapture(0)\n",
     "\n",
     "# Read the category labels\n",
-    "categories = get_categories_from_file(args[0])\n",
+    "categories = get_categories_from_file(\"categories.txt\")\n",
     "dogs = categories[151:270]\n",
     "cats = categories[281:294]\n",
     "\n",
     "# Get the model's input dimensions. We'll use this information later to resize images appropriately.\n",
-    "inputShape = model1.get_default_input_shape()\n",
+    "inputShape = model.get_default_input_shape()\n",
     "\n",
     "# Create a vector to hold the model's output predictions\n",
-    "outputShape = model1.get_default_output_shape()\n",
-    "predictions = model1.FloatVector(outputShape.Size())\n",
+    "outputShape = model.get_default_output_shape()\n",
+    "predictions = model.FloatVector(outputShape.Size())\n",
     "\n",
-    "# Declare variables to hold state that we use to ensure we play sounds on new recognition\n",
-    "lastHist = None\n",
-    "significantDiff = 5000\n",
-    "lastPredictionTime = 0\n",
     "headerText = \"\"\n",
     "\n",
-    "while (cv2.waitKey(1) == 0xFF):\n",
-    "    # Get an image from the camera. If you'd like to use a different image, load the image from some other source.\n",
-    "    image = get_image_from_camera(camera)\n",
+    "# Get an image from the camera. If you'd like to use a different image, load the image from some other source.\n",
+    "image = get_image_from_camera(camera)\n",
     "\n",
-    "    # Prepare the image to pass to the model. This helper:\n",
-    "    # - crops and resizes the image maintaining proper aspect ratio\n",
-    "    # - reorders the image channels if needed\n",
-    "    # - returns the data as a ravelled numpy array of floats so it can be handed to the model\n",
-    "    input = helpers.prepare_image_for_model(image, inputShape.columns, inputShape.rows)\n",
+    "# Prepare the image to pass to the model. This helper:\n",
+    "# - crops and resizes the image maintaining proper aspect ratio\n",
+    "# - reorders the image channels if needed\n",
+    "# - returns the data as a ravelled numpy array of floats so it can be handed to the model\n",
+    "input = helpers.prepare_image_for_model(image, inputShape.columns, inputShape.rows)\n",
     "\n",
-    "    # Get a histogram using OpenCV as a quick way to detect whether the image has changed significantly\n",
-    "    hist = np.histogram(input,16,[0,256])[0]\n",
-    "    diff = 1\n",
-    "    if lastHist is None:\n",
-    "        lastHist = hist           \n",
-    "    else:\n",
-    "        diff = max(lastHist - hist)\n",
+    "# Get the predicted classes using the model's predict function on the image input data. \n",
+    "# The predictions are returned as a vector with the probability that the image\n",
+    "# contains the class represented by that index.\n",
+    "model.predict(input, predictions)\n",
     "\n",
-    "    # Check whether the image has changed significantly and that enough time has passed\n",
-    "    # since our last prediction to decide whether to predict again\n",
-    "    now = time.time()\n",
-    "    if diff >= significantDiff and now - lastPredictionTime > 2:\n",
-    "        # Get the predicted classes using the model's predict function on the image input data. \n",
-    "        # The predictions are returned as a vector with the probability that the image\n",
-    "        # contains the class represented by that index.\n",
-    "        model1.predict(input, predictions)\n",
+    "# Let's grab the value of the top prediction and its index, which represents the top most \n",
+    "# confident match and the class or category it belongs to.\n",
+    "topN = helpers.get_top_n_predictions(predictions, 1)\n",
     "\n",
-    "        # Let's grab the value of the top prediction and its index, which represents the top most \n",
-    "        # confident match and the class or category it belongs to.\n",
-    "        topN = helpers.get_top_n_predictions(predictions, 1)\n",
+    "# See whether the prediction is in one of our groups\n",
+    "group = \"\"\n",
+    "caption = \"\"\n",
+    "label = \"\"\n",
+    "if len(topN) > 0:\n",
+    "    top = topN[0]\n",
+    "    label = categories[top[0]]\n",
+    "    if label_in_set(label, dogs):\n",
+    "        group = \"Dog\"\n",
+    "    elif label_in_set(label, cats):\n",
+    "        group = \"Cat\"\n",
     "\n",
-    "        # See whether the prediction is in one of our groups\n",
-    "        group = \"\"\n",
-    "        caption = \"\"\n",
-    "        label = \"\"\n",
-    "        if len(topN) > 0:\n",
-    "            top = topN[0]\n",
-    "            label = categories[top[0]]\n",
-    "            if label_in_set(label, dogs):\n",
-    "                group = \"Dog\"\n",
-    "            elif label_in_set(label, cats):\n",
-    "                group = \"Cat\"\n",
+    "if group != \"\":\n",
+    "    # A group was detected, so take action\n",
+    "    top = topN[0]\n",
+    "    take_action(group)\n",
+    "    headerText = \"(\" + str(int(top[1]*100)) + \"%) \" + group\n",
+    "    lastPredictionTime = now\n",
+    "    lastHist = hist\n",
+    "else:\n",
+    "    # No group was detected\n",
+    "    headerText = \"? \" + label\n",
     "\n",
-    "        if not group == \"\":\n",
-    "            # A group was detected, so take action\n",
-    "            top = topN[0]\n",
-    "            take_action(group)\n",
-    "            headerText = \"(\" + str(int(top[1]*100)) + \"%) \" + group\n",
-    "            lastPredictionTime = now\n",
-    "            lastHist = hist\n",
-    "        else:\n",
-    "            # No group was detected\n",
-    "            headerText = \"\"\n",
-    "\n",
-    "    if now - lastPredictionTime > 2:\n",
-    "        # Reset the header text\n",
-    "        headerText = \"\"\n",
-    "\n",
-    "    print(headerText)"
+    "print('PREDICTION')\n",
+    "print(headerText, flush=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -342,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
