--- a/Try it on a device/Boosting classifier accuracy by grouping categories.ipynb
+++ b/Try it on a device/Boosting classifier accuracy by grouping categories.ipynb
@@ -38,54 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: 'conda-forge' already in 'channels' list, moving to the top\n",
-      "Warning: 'microsoft-ell' already in 'channels' list, moving to the top\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching package metadata .................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "PackageNotFoundError: Packages missing in current channels:\n",
-      "            \n",
-      "  - ell\n",
-      "\n",
-      "We have searched for the packages in the following channels:\n",
-      "            \n",
-      "  - https://conda.anaconda.org/microsoft-ell/win-64\n",
-      "  - https://conda.anaconda.org/microsoft-ell/noarch\n",
-      "  - https://conda.anaconda.org/conda-forge/win-64\n",
-      "  - https://conda.anaconda.org/conda-forge/noarch\n",
-      "  - https://repo.continuum.io/pkgs/main/win-64\n",
-      "  - https://repo.continuum.io/pkgs/main/noarch\n",
-      "  - https://repo.continuum.io/pkgs/free/win-64\n",
-      "  - https://repo.continuum.io/pkgs/free/noarch\n",
-      "  - https://repo.continuum.io/pkgs/r/win-64\n",
-      "  - https://repo.continuum.io/pkgs/r/noarch\n",
-      "  - https://repo.continuum.io/pkgs/pro/win-64\n",
-      "  - https://repo.continuum.io/pkgs/pro/noarch\n",
-      "  - https://repo.continuum.io/pkgs/msys2/win-64\n",
-      "  - https://repo.continuum.io/pkgs/msys2/noarch\n",
-      "            \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!conda config --prepend channels conda-forge --prepend channels microsoft-ell\n",
     "!conda install -y ell"
@@ -102,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +74,7 @@
        "'boosting\\\\pi3\\\\CMakeLists.txt'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "scrolled": false
@@ -165,15 +120,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Password on the Raspberry Pi ········\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a57b95d0ab4d4210b58c73b83effb552"
+       "model_id": "0442265d837a4d95a5bb6b7e75854cb0"
       }
      },
      "metadata": {},
@@ -184,7 +146,7 @@
      "output_type": "stream",
      "text": [
       "PREDICTION\n",
-      "? file, file cabinet, filing cabinet\n"
+      "? \n"
      ]
     }
    ],
