--- a/Try it on a device/Getting started with image classification on the Raspberry Pi.ipynb
+++ b/Try it on a device/Getting started with image classification on the Raspberry Pi.ipynb
@@ -26,6 +26,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import ell"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -37,9 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from ell.util.gallery import ModelGallery\n",
@@ -57,9 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pretrained_model = gallery.model\n",
@@ -82,9 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import ell.platform\n",
@@ -107,12 +112,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%%rpi --user=pi --ip=157.54.152.78 --rpipath=/home/pi/mymodel --model=pretrained_model\n",
+    "%%rpi --user=pi --ip=157.54.156.73 --rpipath=/home/pi/mymodel --model=pretrained_model\n",
     "\n",
     "import cv2\n",
     "import numpy as np\n",
@@ -133,7 +136,7 @@
     "\n",
     "input = helpers.prepare_image_for_model(image, inputShape.columns, inputShape.rows)\n",
     "model.predict(input, predictions)\n",
-    "top5 = helpers.get_top_n_predictions(predictions, 5)\n",
+    "top5 = helpers.get_top_n(predictions, 5)\n",
     "text = \"\".join([\"(\" + str(int(conf * 100)) + \"%) \" + categories[index] for (index, conf) in top5])\n",
     "print('TOP 5:')\n",
     "print(text)"
@@ -154,7 +157,7 @@
    },
    "outputs": [],
    "source": [
-    "%%rpi --user=pi --ip=157.54.152.78 --rpipath=/home/pi/mymodel --model=pretrained_model\n",
+    "%%rpi --user=pi --ip=157.54.156.73 --rpipath=/home/pi/mymodel --model=pretrained_model\n",
     "\n",
     "import cv2\n",
     "import numpy as np\n",
@@ -184,7 +187,7 @@
     "\n",
     "input = helpers.prepare_image_for_model(image, inputShape.columns, inputShape.rows)\n",
     "model.predict(input, predictions)\n",
-    "top5 = helpers.get_top_n_predictions(predictions, 5)\n",
+    "top5 = helpers.get_top_n(predictions, 5)\n",
     "text = \"\".join([\"(\" + str(int(conf * 100)) + \"%) \" + categories[index] for (index, conf) in top5])\n",
     "print('TOP 5:')\n",
     "print(text)"
@@ -200,9 +203,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -214,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
