fix scripts for latest version of ELL

--- a/Try it on Azure/Boosting classifier accuracy by grouping categories.ipynb
+++ b/Try it on Azure/Boosting classifier accuracy by grouping categories.ipynb
@@ -339,7 +339,6 @@
     "import urllib.request\n",
     "\n",
     "model = pretrained_model.load()\n",
-    "predictions = model.FloatVector(model.get_default_output_shape().Size())\n",
     "\n",
     "test_set = [\n",
     "    \"https://upload.wikimedia.org/wikipedia/commons/5/52/WizzdomOfSoulcharisma.jpg\",\n",
@@ -357,7 +356,7 @@
     "\n",
     "    data = pretrained_model.prepare_image(image)\n",
     "\n",
-    "    model.predict(data, predictions)\n",
+    "    predictions = model.predict(data)\n",
     "    top5 = helper.get_top_n(predictions, 5)\n",
     "    if len(top5) > 0:\n",
     "        (index,_) = top5[0]\n",
@@ -385,9 +384,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -399,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
