--- a/Try it on Azure/Getting started with image classification on the Raspberry Pi.ipynb
+++ b/Try it on Azure/Getting started with image classification on the Raspberry Pi.ipynb
@@ -198,17 +198,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "predictions = model.FloatVector(output_shape.Size())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -274,14 +263,14 @@
    },
    "outputs": [],
    "source": [
-    "model.predict(input, predictions)"
+    "predictions = model.predict(input)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `predict` method fills the `predictions` array with probability scores, which sum to 1. Each element of this array corresponds to one of the 1000 image classes recognized by the model. Print the index of the highest confidence category. This code also looks up the category name by reading the corresponding line in `categories.txt`. For example, if the highest confidence category is 504, line 504 of `categories.txt` is `coffee mug`. The value at `predictions[504]` is the model's confidence in this prediction. For example, a value of `0.514353` means that the model is 51% confident that the image contains a coffee mug."
+    "The `predict` method fills the `predictions` array with probability scores. Each element of this array corresponds to one of the 1000 image classes recognized by the model. Print the index of the highest confidence category. This code also looks up the category name by reading the corresponding line in `categories.txt`. For example, if the highest confidence category is 504, line 504 of `categories.txt` is `coffee mug`. The value at `predictions[504]` is the model's confidence in this prediction. For example, a value of `0.514353` means that the model is 51% confident that the image contains a coffee mug."
    ]
   },
   {
@@ -315,9 +304,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -329,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
