--- a/Try it on a device/Boosting classifier accuracy by grouping categories.ipynb
+++ b/Try it on a device/Boosting classifier accuracy by grouping categories.ipynb
@@ -237,7 +237,6 @@
     "\n",
     "# Create a vector to hold the model's output predictions\n",
     "outputShape = model.get_default_output_shape()\n",
-    "predictions = model.FloatVector(outputShape.Size())\n",
     "\n",
     "headerText = \"\"\n",
     "\n",
@@ -253,11 +252,11 @@
     "# Get the predicted classes using the model's predict function on the image input data. \n",
     "# The predictions are returned as a vector with the probability that the image\n",
     "# contains the class represented by that index.\n",
-    "model.predict(input, predictions)\n",
+    "predictions = model.predict(input)\n",
     "\n",
     "# Let's grab the value of the top prediction and its index, which represents the top most \n",
     "# confident match and the class or category it belongs to.\n",
-    "topN = helpers.get_top_n_predictions(predictions, 1)\n",
+    "topN = helpers.get_top_n(predictions, 1)\n",
     "\n",
     "# See whether the prediction is in one of our groups\n",
     "group = \"\"\n",
@@ -303,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
