--- a/Try it on a device/Getting started with image classification on the Raspberry Pi.ipynb
+++ b/Try it on a device/Getting started with image classification on the Raspberry Pi.ipynb
@@ -127,13 +127,12 @@
     "\n",
     "inputShape = model.get_default_input_shape()\n",
     "outputShape = model.get_default_output_shape()\n",
-    "predictions = model.FloatVector(outputShape.Size())\n",
     "\n",
     "categories = [line.strip('\\n') for line in open('categories.txt', 'r').readlines()]\n",
     "\n",
     "input = helpers.prepare_image_for_model(image, inputShape.columns, inputShape.rows)\n",
-    "model.predict(input, predictions)\n",
-    "top5 = helpers.get_top_n_predictions(predictions, 5)\n",
+    "predictions = model.predict(input)\n",
+    "top5 = helpers.get_top_n(predictions, 5)\n",
     "text = \"\".join([\"(\" + str(int(conf * 100)) + \"%) \" + categories[index] for (index, conf) in top5])\n",
     "print('TOP 5:')\n",
     "print(text)"
@@ -178,13 +177,12 @@
     "\n",
     "inputShape = model.get_default_input_shape()\n",
     "outputShape = model.get_default_output_shape()\n",
-    "predictions = model.FloatVector(outputShape.Size())\n",
     "\n",
     "categories = [line.strip('\\n') for line in open('categories.txt', 'r').readlines()]\n",
     "\n",
     "input = helpers.prepare_image_for_model(image, inputShape.columns, inputShape.rows)\n",
-    "model.predict(input, predictions)\n",
-    "top5 = helpers.get_top_n_predictions(predictions, 5)\n",
+    "predictions = model.predict(input)\n",
+    "top5 = helpers.get_top_n(predictions, 5)\n",
     "text = \"\".join([\"(\" + str(int(conf * 100)) + \"%) \" + categories[index] for (index, conf) in top5])\n",
     "print('TOP 5:')\n",
     "print(text)"
@@ -200,9 +198,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -214,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
