--- a/Try it on Azure/Comparing image classification models side by side.ipynb
+++ b/Try it on Azure/Comparing image classification models side by side.ipynb
@@ -83,8 +83,7 @@
    "outputs": [],
    "source": [
     "model1 = pretrained1.load()\n",
-    "model2 = pretrained2.load()\n",
-    "predictions = model1.FloatVector(model.get_default_output_shape().Size())"
+    "model2 = pretrained2.load()"
    ]
   },
   {
@@ -132,8 +131,8 @@
    "outputs": [],
    "source": [
     "%time\n",
-    "model1.predict(input, predictions)\n",
-    "top5 = helpers.get_top_n_predictions(predictions, 5)\n",
+    "predictions = model1.predict(input)\n",
+    "top5 = helpers.get_top_n(predictions, 5)\n",
     "print(\"\".join([\"(\" + str(int(conf * 100)) + \"%) \" + categories[index] for (index, conf) in top5]))"
    ]
   },
@@ -153,8 +152,8 @@
    "outputs": [],
    "source": [
     "%time\n",
-    "model2.predict(input, predictions)\n",
-    "top5 = helpers.get_top_n_predictions(predictions, 5)\n",
+    "predictions = model2.predict(input)\n",
+    "top5 = helpers.get_top_n(predictions, 5)\n",
     "print(\"\".join([\"(\" + str(int(conf * 100)) + \"%) \" + categories[index] for (index, conf) in top5]))"
    ]
   },
@@ -168,9 +167,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -182,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
